# prismx

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  Cargo.toml  PATCH_TRACKING.md  README.md  RefractPack_README.md  STATUS_TABLE.md  config.toml  create_structure.sh  keymaps.json  patch-ignore.txt  startup.sh  theme.toml
.github/scripts/: automerge-check.sh  filter-patch-jobs.sh  label-codex-prs.sh
.github/workflows/: auto-label.yml  auto-merge-patch.yml  delete-merged-patches.yml  label-and-merge.yml  patch-uploader.yml  prismx-ci.yml  prismx-patch-test.yml  prismx-patch-tests.yml  prismx-regression-audit.yml  test-behavior.yml
0.1.0/: Cargo.toml  README.md
0.1.0/data/: mindmaps.json
0.1.0/src/: actions.rs  app.rs  config.rs  inbox.rs  input.rs  logger.rs  main.rs  mod.rs  scratchpad.rs  screen.rs  state.rs  view_triage.rs  zen_mode.rs
0.1.0/src/api/: mindmap_api.rs
0.1.0/src/extension_host/: capability.rs  errors.rs  lib.rs  mod.rs  plugin.rs  profiler.rs  sandbox.rs
0.1.0/src/spotlight/: actions.rs  debug.rs  engine.rs  favorites.rs  mod.rs  plugin.rs  state.rs  tests.rs  ui.rs
0.1.0/src/storage/: mod.rs
0.1.0/src/tui/: mindmap.rs
0.1.0/src/util/: errors.rs  logger.rs  mod.rs  undo_redo.rs
assets/: default_scratchpad.md
backup-patches/patch-25.43-link-arrows-mac-scroll/: test_plan.sh
backup-patches/patch-25.44-drag-drop-snap/: test_plan.sh
backup-patches/patch-25.44a-fix-sibling-linking/: DESCRIPTION.md
backup-patches/patch-25.44b-node-graph-audit/: DESCRIPTION.md
config/: default.toml  hotkeys.toml  launch_platform.toml  layout.toml  plugin.json  prismx-epel.toml  settings.toml  shortcuts.toml
data/: dashboard_config.json  inbox.json  mindmap.json  mindmaps_backup.json  widget_themes.json
docs/: INBOX-TRIAGE_README.md  PrismX Plugin & Extension Developer Guide (v1.0.0).md  PrismX v0.1.28 – Developer & User Reference.md  README.md  ZEN-README  api_guide.md  cheatsheet-vim.md  cheatsheet.md  dev_guide.md  prismx_roadmap  prismx_system_architecture
examples/: basic_usage.rs  plugin_demo.rs  widget_example.rs
export/: mod.rs
extensions/: prismx-plugin.json
federation/: sync_status.json
golden/: README.md  patch-25.99z-METADATA.txt  patch-25.99z-golden-image.diff
plugin/: manifest_template.json
plugins/: manifest.json
policy/: retire.toml
prismx_macros/: Cargo.toml
scripts/: clean_run.sh  gitcommit.sh  gitcommit_and_run.sh  patch-cleanup.sh  prune-patches.sh  scan-duplicates.sh  scan-orphan-patches.sh  verify-module-structure.sh  verify-test-plans.sh
snapshots/: compliance_score.json
src/: action.rs  actions.rs  app.rs  audit.rs  beam_color.rs  beamx.rs  bootstrap.rs  clipboard.rs  collections.rs  command_bar.rs  comment.rs  config.rs  config_watcher.rs  dashboard.rs  dashboard_toggle.rs  dashboard_widgets.rs  dynamic_plugin.rs  error_handling.rs  export.rs  export_engine.rs  federation.rs  gemx.rs  icon.rs  inbox.rs  input.rs  io.rs  json_store.rs  keymap.rs  layout.rs  lib.rs  log_viewer.rs  logger.rs  logging.rs  main.rs  metadata.rs  mindmap.rs  mindmap_state.rs  mindtrace.rs  mod.rs  mode.rs  (+43 more)
tests/: autocomplete.rs  dock_navigation.rs  drill_pop.rs  favorites_config.rs  insertion.rs  module_icon.rs  module_switcher.rs  module_switcher_input.rs  plugin_favorites.rs  simulate.rs  spotlight_exec.rs  tab_no_crash.rs  tag_parser.rs  triage_toggle.rs  undo_redo.rs  zen_autosave.rs  zen_footer.rs  zen_toolbar.rs
theme/: theme.toml
wasm/: Cargo.toml  entry.rs  index.html
(+1728 files in other folders)
