[dependencies]
# Serialization and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
serde_with = "3"

# TUI and terminal control
crossterm = "0.27"
ratatui = "0.23"
unicode-width = "0.1"

# Utilities
chrono = "0.4"
dirs = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
libloading = "0.7"
regex = "1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2"
# console_error_panic_hook = "0.1"
# web-sys = { version = "0.3", features = ["console"] }

# [[bin]]
# name = "prismx_wasm"

# [[bin]]
# name = "wasm_build"
# path = "build/wasm_build.rs"
