[package]
name = "prismx"
version = "10.2.0"
edition = "2021"
authors = ["Brandon Essex"]
description = "PrismX: Offline-first planning engine with trust, federation, and plugin runtime."

[[bin]]
name = "prismx"
path = "src/main.rs"

[dependencies]
# Serialization and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
serde_with = "3"

# TUI and terminal control
crossterm = "0.27"
ratatui = "0.23"
unicode-width = "0.1"

# Utilities
chrono = "0.4"
dirs = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2" # file logging via PRISMX_LOG
libloading = "0.7"
regex = "1"
prismx_macros = { path = "crates/prismx_macros" }

# Async runtime
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
once_cell = "1"
walkdir = "2"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2"
# console_error_panic_hook = "0.1"
# web-sys = { version = "0.3", features = ["console"] }

# [[bin]]
# name = "prismx_wasm"

# [[bin]]
# name = "wasm_build"
# path = "build/wasm_build.rs"

[features]
default = ["std"]
std = []

[workspace]
members = [".", "crates/prismx_macros", "wasm"]
