[package]
name = "prismx"
version = "0.1.6"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
wasmtime = "14.0"
anyhow = "1.0"
thiserror = "1.0"
fuzzy-matcher = "0.3"
notify = "6.1.1"
lazy_static = "1.4"
tracing = "0.1"